Cost reports filter width animation removed and height/scrollbars fixed

--- a/app/assets/stylesheets/layout/_base.sass
+++ b/app/assets/stylesheets/layout/_base.sass
@@ -65,6 +65,7 @@
     padding:    0
 
 #content
+  position: relative
   padding: 0
   margin: 0
   width: 100%
